<resources>
    <string name="app_name">Photos</string>
    <string name="createAlbum">Create Album</string>
    <string name="renameAlbum">Rename Album</string>
    <string name="deleteAlbum">Delete Album</string>
    <string name="addPhoto">Add Photo</string>
    <string name="movePhoto">Move Photo</string>
    <string name="deletePhoto">Delete Photo</string>
    <string name="slideshow">Play Slideshow</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="tagsLabel">Tags:</string>
    <string name="addTag">Add Tag</string>
    <string name="deleteTag">Delete Tag</string>
    <string name="search">Search Photos</string>
    <string name="searchButton">Search</string>
    <string name="searchLabel">Search Tags: </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
</resources>
